engine-net-2/examples/Errors/UnknownPatternElement.grs
new graph "Rules.grg"

eval [?t\assign<x>StartWith{0}AccumulateBy{accu:int,elem:int->42}]

quit
